# studies

./: .gitignore
cpp_tests/Codewars/: find_the_next_perfect_square.cpp  square_every_digit.cpp
cpp_tests/HackerRank/: abstract_classes_polymorphism.cpp  accessing_inherited_functions.cpp  array_introduction.cpp  attending_workshops.cpp  (+35 more)
cpp_tests/netology/basic-programming/hw-17-files-libraries/task-3-hierarchy/: CMakeLists.txt  Quadrangle.cpp  Triangle.h  includes.h  main.cpp
cpp_tests/netology/basic-programming/hw-17-files-libraries/task-3-hierarchy/Quadrangle/: Parallelogram.h  Rhombus.cpp
cpp_tests/netology/basic-programming/hw-17-files-libraries/task-3-hierarchy/Triangle/: RightTriangle.cpp
cpp_tests/netology/factory_method_test/: CMakeLists.txt  LandVehicle.h  Vehicle.h  main.cpp
cpp_tests/netology/factory_method_test/lib/: Simulation.cpp  Simulation.h  Vehicle.cpp  Vehicle.h  VehicleComparator.cpp  VehicleComparator.h  VehicleFactory.cpp  VehicleFactory.h
cpp_tests/netology/factory_method_test/lib/land/: Camel.cpp  Camel.h  CamelFactory.cpp  CamelFactory.h  LandVehicle.cpp  LandVehicle.h
cpp_tests/netology/hw-19-exceptions-error-handling/task-2-constructor-exception/: CMakeLists.txt  PolygonConstructorException.cpp  PolygonConstructorException.h  Quadrangle.h  Triangle.cpp  main.cpp
cpp_tests/netology/hw-19-exceptions-error-handling/task-2-constructor-exception/Quadrangle/: Parallelogram.cpp  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h
cpp_tests/netology/hw-19-exceptions-error-handling/task-2-constructor-exception/Triangle/: EquiliteralTriangle.cpp  IsoscelesTriangle.cpp  IsoscelesTriangle.h  RightTriangle.cpp  RightTriangle.h
cpp_tests/netology/hw-22-libraries/task-5-dynamic-polygon-library/: CMakeLists.txt  Polygon.cpp  Triangle.h  main.cpp
cpp_tests/netology/hw-22-libraries/task-5-dynamic-polygon-library/Quadrangle/: Rectangle.cpp
cpp_tests/netology/race_simulator/: AirVehicle.h  CMakeLists.txt  CamelFactory.h  Centaur.cpp  LandVehicle.h  Simulation.cpp  Vehicle.h  VehicleComparator.cpp  VehicleComparator.h  VehicleFactory.h  main.cpp
cpp_tests/netology/race_simulator/lib/: AirVehicle.h  Broom.cpp  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Eagle.cpp  Eagle.h  LandVehicle.h  Simulation.cpp  Simulation.h  Vehicle.cpp  Vehicle.h  VehicleComparator.cpp  VehicleComparator.h  VehicleFactory.cpp  VehicleFactory.h  VehicleManager.cpp  VehicleManager.h  VehicleRegisteredException.h
cpp_tests/netology/race_simulator/lib/air/: AirVehicle.cpp  AirVehicle.h  Broom.cpp  Broom.h  BroomFactory.cpp  BroomFactory.h  CarpetPlane.cpp  CarpetPlane.h  CarpetPlaneFactory.cpp  CarpetPlaneFactory.h  EagleFactory.cpp  EagleFactory.h
cpp_tests/netology/race_simulator/lib/land/: AllTerrainBoots.cpp  AllTerrainBoots.h  AllTerrainBootsFactory.cpp  AllTerrainBootsFactory.h  Camel.cpp  Camel.h  CamelFactory.cpp  CamelFactory.h  Centaur.cpp  Centaur.h  CentaurFactory.cpp  CentaurFactory.h  FastCamel.cpp  FastCamel.h  FastCamelFactory.cpp  FastCamelFactory.h  LandVehicle.h
linux_scripts/: count_words.awk
netology_sysadm/: YC static key pair.docx  apache2_role.rar  Домашнее задание _Администрирование IT-систем_ - Краснощеков Владимир.docx  Домашнее задание _Архитектура компьютера. Операционная система_ - Краснощеков Владимир.docx  Домашнее задание _Знакомство с операционной системой Linux_ - Краснощеков Владимир.docx  Домашнее задание _Резервное копирование_ - Краснощеков Владимир.docx  Домашнее задание _Шаблон_ - Краснощеков Владимир.docx  Домашнее задание к занятию _DHCP, PXE_ - Краснощеков Владимир.docx  Домашнее задание к занятию _DNS_ - Краснощеков Владимир.docx  Домашнее задание к занятию _HTTP_HTTPS_ - Краснощеков Владимир.docx  Домашнее задание к занятию _IPv6_ - Краснощеков Владимир.docx  Домашнее задание к занятию _L2-сеть_ - Краснощеков Владимир.docx  Домашнее задание к занятию _L3-сеть_ - Краснощеков Владимир.docx  Домашнее задание к занятию _L4-сеть_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Regexp и его использование для синтаксического анализа_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Дисковые системы_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Основы работы в терминале ОС Linux_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Память, управление памятью_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Процессы, управление процессами_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Работа с текстовыми утилитами_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Разбор скриптов и и их написание_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Сеть и сетевые протоколы_ Firewall_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Сеть и сетевые протоколы_ NAT_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Сеть и сетевые протоколы_ VPN_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Теоретические основы сети. Модель OSI и TCP_IP_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Траблшутинг_ - Краснощеков Владимир.docx  Домашнее задание к занятию _Шедулер_ - Краснощеков Владимир.docx  Домашнее задание к занятию «Ansible. Часть 1» - Краснощеков Владимир.docx  Домашнее задание к занятию «Ansible.Часть 2» - Краснощеков Владимир.docx  Домашнее задание к занятию «Disaster recovery и Keepalived» - Краснощеков Владимир.docx  Домашнее задание к занятию «Docker. Часть 1» - Краснощеков Владимир.docx  Домашнее задание к занятию «Docker. Часть 2» - Краснощеков Владимир.docx  Домашнее задание к занятию «ELK» - Краснощеков Владимир.docx  Домашнее задание к занятию «GitLab» - Краснощеков Владимир.docx  Домашнее задание к занятию «Git» - Краснощеков Владимир.docx  Домашнее задание к занятию «Kubernetes. Часть 1» - Краснощеков Владимир.docx  Домашнее задание к занятию «Prometheus. Часть 2» - Краснощеков Владимир.docx  Домашнее задание к занятию «SQL. Часть 1» - Краснощеков Владимир.docx  Домашнее задание к занятию «SQL. Часть 2» - Краснощеков Владимир.docx  Домашнее задание к занятию «Terraform» - Краснощеков Владимир.docx  (+28 more)
(+239 files in other folders)
